--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>creacion h1 del index</h1> 
+   <h2>se agrega h2 al index</h2>
 </body>
 </html>
