--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h2>se agrega h2 al index</h2>
+   <h3>se agrega h3</h3>
+   <h4>se agrega h4 </h4>
 </body>
 </html>
